# py2sdid

./: .gitignore  README.md  REFERENCE.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
benchmarks/: full_analysis.py  performance.py  validation.py
src/py2sdid/: __init__.py  _types.py  core.py  diagnostics.py  effects.py  first_stage.py  inference.py  linalg.py  panel.py  plotting.py  results.py
tests/: conftest.py  demo_rcs.py  test_diagnostics.py  test_fixture.py  test_plotting.py  test_rcs.py  test_rcs_fixture.py  test_robust.py  test_smoke.py  test_stress.py  test_vs_r.py
tests/data/: generate_fixture.py  generate_large_fixture.py  generate_rcs_fixture.py  rcs_aggregated.parquet  rcs_individual.parquet  rcs_metadata.json  staggered_panel.parquet  staggered_panel_metadata.json
