[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py2sdid"
version = "0.1.0"
description = "Two-stage DiD and BJS imputation estimator for staggered treatment designs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Alan Huang" }]
keywords = [
    "causal-inference",
    "difference-in-differences",
    "panel-data",
    "treatment-effects",
    "event-study",
    "staggered-adoption",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "polars>=0.20",
    "pyarrow>=12.0",
    "joblib>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-xdist"]
r-comparison = ["rpy2>=3.5", "pandas>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/py2sdid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
]
